2006-06-06  rgareus  <robin@gareus.org>
 - when seeking to non key frames, 
   the video can be decoded starting from the prev keyframe.
 - removed LIBAVCODEC < 4622 backwards seek compat.
 - new valid seekmodes (remote ctrl) are 'key', 'any' and 'continuous' (default).
 - OSD Frame is now the displayed frame, while the SMPTE still corresponds to jack time.  
 - XV,SDL (YUV): added support for video image strides other than XV pitches. 
   eg. if video width is not a multiple of 8 -  prev. versions of xjadeo either crash, or display wrong colors... 
 * version v0.3.13

2006-05-30  rgareus  <robin@gareus.org>
 - proper YV12 and I420 support for XV.
 - SDL 1.2.9 or 1.1.6

2006-05-24  rgareus  <robin@gareus.org>
 - added simple resource config parser.

2006-05-21  rgareus  <robin@gareus.org>
 - minor fixes on the build environement for `make dist` (contrib, qt-gui sources, ..)
 - fixed some typos in yesterdays Makefile.am
 - never ending overkilling docbook
 * version v0.3.12

2006-05-20  rgareus  <robin@gareus.org>
 - added docbook xslt and doc/Makefile...
 - work in progres on the manual.
 - changed Audioframe to videoframe, smpte converstion from floor to rint 
   yielding to proper results if audibuffers size != 1920 (48k->PAL) or 1601 (48k->NTSC) 

2006-04-28  rgareus  <robin@gareus.org>
 - fixed typo: since the 04/23 patches
   xjadeo was displaying the previous instead of the current frame!

2006-27-09  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Added OSD font, frame and smpte commands to qjadeo menu.
 - OSD font is stored as a qjadeo preference.
 - Some docbook fixing.
 - Revamped qjadeo layout.

2006-04-23  rgareus  <robin@gareus.org>
 - some remote function help typos
 - parsing videomode integer and text
 - notify [loop|frame]
 - more work in progress documentation.
 * version v0.3.11

2006-04-22  rgareus  <robin@gareus.org>
 - added contrib folder
 - implememted 'list videomodes'
 - disabled 'get windowpos'